@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST extlib-0.9.14.gem 64512 RMD160 ad232b05150a619990f5e4bac2926148bb58ae9e SHA1 82505adcdf4792ace6ebc443ae90397ef6f3e3a1 SHA256 9a6156a9b5b65c1b844760e4aa0280b6e90507d3bb0051cc19a2a31099f05c2a
 DIST extlib-0.9.8.gem 31744 RMD160 f6ab187e62dfca9e73dcbe157ebaad0fe5592d21 SHA1 e31c9e3e36415f86cc067c9f2b722db1e9216a27 SHA256 e664c9d231d47188ccab246e02cc70d0a7a608164c884ff75f34f2e59d4e8608
+EBUILD extlib-0.9.14.ebuild 695 RMD160 c3ecb65ee973acda95e83bc8df47688a2d939750 SHA1 15e43840d4985d387d39f040af7bbcad17036d5e SHA256 ae6327ea1a0606fdb00be493a07195547f56e52d0f4510ba75868f7dcc19cf35
 EBUILD extlib-0.9.8.ebuild 301 RMD160 88eb514dc1529e9ee79c25a590d65ec00a32cdcc SHA1 f5495082e501917007c086baf27801a358170588 SHA256 0f4c72edaafab9380ba2a0d0798d86d0c4b18c82c533718970e68e8d80765138
-MISC ChangeLog 269 RMD160 ddb71cd4c487aa2c2ba1e7add0db31413ff06574 SHA1 0d9dd558d5b4af210faf2de8d3a4c3a4f9dcd6f8 SHA256 0e4a8a35da6e315fd43cc6aebd48327af8f4925ef276d52aa6f06c442ea1358d
+MISC ChangeLog 414 RMD160 fc636f86afe9aabfcb45219471e1074fdd6c3d40 SHA1 022e270cf464cd82583c4244bf445183f0636619 SHA256 fa7bd359448dc365c1e327064768a427a216bf399e7c710a8ba4a84fb1cd3bd4
 MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkt6iTYACgkQeM7EJeUH71O8OACeIOlM1ahtdfV76PlLoyIo6tG6
+PQ0AniIF5Huy3bFWoSNwbMhqYVcZAoHK
+=UXJg
+-----END PGP SIGNATURE-----
