@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/extlib
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*extlib-0.9.14 (16 Feb 2010)
+
+  16 Feb 2010; Hans de Graaff <graaff@gentoo.org> +extlib-0.9.14.ebuild:
+  Version bump. Convert to ruby-fakegem.
 
   24 Nov 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
   +extlib-0.9.8.ebuild:
